--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.0",
     "colors": "^1.4.0",
-    "discord.js": "^12.5.0",
-    "hiven": "git+https://github.com/hivenapp/hiven.js.git"
+    "events": "^3.2.0",
+    "form-data": "^3.0.0",
+    "ws": "^7.4.0"
   }
 }
