--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "easyhiven.js",
+  "name": "openhiven.js",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -13,10 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
     "colors": "^1.4.0",
     "form-data": "^3.0.0",
-    "ws": "^7.4.0",
+    "ws": "^7.4.2",
     "xregexp": "^4.4.1"
   }
 }
